--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn22.70:3.4": "Gefühl steckt im Erregenden fest … ",
   "sn22.70:3.5": "Wahrnehmung steckt im Erregenden fest … ",
   "sn22.70:3.6": "Entscheidungen stecken im Erregenden fest … ",
-  "sn22.70:3.7": "Bewusstsein steckt im Erregenden fest – du solltest das Verlangen nach ihm aufgeben. "
+  "sn22.70:3.7": "Bewusstsein steckt im Erregenden fest – du solltest das Verlangen nach ihm aufgeben. ",
+  "sn22.70:3.8": "So ist die ausführliche Bedeutung dieser meiner kurzen Aussage zu verstehen.“ … "
 }
