Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.71:0.1": "Verbundene Lehrreden 22.71 ",
   "sn22.71:0.2": "7. Das Kapitel über die Vollendeten ",
-  "sn22.71:0.3": "Mit Rādha "
+  "sn22.71:0.3": "Mit Rādha ",
+  "sn22.71:1.1": "In Sāvatthī. "
 }
