--- a/translation/de/sabbamitta/sutta/an/an3/an3.32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.32_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an3.32:4.1": "„Ānanda, es ist, wenn ein Mönch oder eine Nonne denkt: ",
   "an3.32:4.2": "‚Das ist friedvoll, das ist erhaben: nämlich das Beruhigen aller Vorgänge, das Loslassen aller Bindungen, das Beenden des Verlangens, das Schwinden, Aufhören, Erlöschen.‘ ",
   "an3.32:4.3": "So, Ānanda, kann ein Mönch oder eine Nonne einen Versenkungszustand erreichen, in dem es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize; ",
-  "an3.32:4.4": "und diese Person kann im Besitz der Freiheit des Herzens leben, der Freiheit durch Weisheit, wo Anmaßen, Besitzgier und zugrunde liegende Neigung zur Einbildung nicht mehr sind. ",
+  "an3.32:4.4": "und diese Person kann im Besitz der Freiheit des Herzens leben, der Freiheit durch Weisheit, wo Ich-Machen, Mein-Machen und zugrunde liegende Neigung zur Einbildung nicht mehr sind. ",
   "an3.32:5.1": "Und, Ānanda, das ist es, worauf ich im ‚Weg zum Jenseits‘, in ‚Puṇṇakas Fragen‘, Bezug genommen habe, als ich sagte: ",
   "an3.32:6.1": "‚Sie haben die Höhen und Tiefen der Welt eingeschätzt, ",
   "an3.32:6.2": "und nichts in der Welt beunruhigt sie. ",
