--- a/translation/de/sabbamitta/sutta/sn/sn18/sn18.21_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn18/sn18.21_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn18.21:0.3": "Neigung ",
   "sn18.21:1.1": "In Sāvatthī. ",
   "sn18.21:1.2": "Da ging der Ehrwürdige Rāhula zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
-  "sn18.21:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Anmaßen, keine Besitzgier und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ ",
+  "sn18.21:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ ",
   "sn18.21:1.4": "„Rāhula, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn18.21:1.5": "Man sieht jegliche Art von Gefühl … ",
   "sn18.21:1.6": "jegliche Art von Wahrnehmung … ",
