Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.71:0.2": "7. Das Kapitel über die Vollendeten ",
   "sn22.71:0.3": "Mit Rādha ",
   "sn22.71:1.1": "In Sāvatthī. ",
-  "sn22.71:1.2": "Da ging der Ehrwürdige Rādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: "
+  "sn22.71:1.2": "Da ging der Ehrwürdige Rādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
+  "sn22.71:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ "
 }
