--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn22.71:1.2": "Da ging der Ehrwürdige Rādha zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "sn22.71:1.3": "„Herr, auf welche Art erkennt und sieht man, sodass es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize?“ ",
   "sn22.71:1.4": "„Rādha, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
-  "sn22.71:1.5": "Man sieht jegliche Art von Gefühl … "
+  "sn22.71:1.5": "Man sieht jegliche Art von Gefühl … ",
+  "sn22.71:1.6": "Man sieht jegliche Art von Wahrnehmung … "
 }
