--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.71_translation-de-sabbamitta.json
@@ -8,5 +8,5 @@
   "sn22.71:1.4": "„Rādha, man sieht jegliche Art von Form – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form – wahrhaftig mit rechter Weisheit: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst.‘ ",
   "sn22.71:1.5": "Man sieht jegliche Art von Gefühl … ",
   "sn22.71:1.6": "jegliche Art von Wahrnehmung … ",
-  "sn22.71:1.7": "Man sieht jegliche Art von Entscheidungen … "
+  "sn22.71:1.7": "jegliche Art von Entscheidungen … "
 }
