--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn22.72:0.1": "Verbundene Lehrreden 22.72 "
+  "sn22.72:0.1": "Verbundene Lehrreden 22.72 ",
+  "sn22.72:0.2": "7. Das Kapitel über die Vollendeten "
 }
