Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -680,6 +680,7 @@
   "sn-name:679.sn22.69": "Nicht zu einem Selbst gehörend ",
   "sn-name:680.sn22.70": "Im Erregenden feststecken ",
   "sn-name:681.sn22.71": "Mit Rādha ",
+  "sn-name:682.sn22.72": "Mit Surādha ",
   "sn-name:683.sn22-khajjaniyavagga": "Das Kapitel über Jucken ",
   "sn-name:694.sn22-theravagga": "Das Kapitel mit Ordensältesten ",
   "sn-name:702.sn22.90": "Mit Channa ",
