--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.72_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.72:1.5": "Wenn man jegliche Art von Gefühl … ",
   "sn22.72:1.6": "jegliche Art von Wahrnehmung … ",
   "sn22.72:1.7": "jegliche Art von Entscheidungen … ",
-  "sn22.72:1.8": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wenn man es wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. "
+  "sn22.72:1.8": "jegliche Art von Bewusstsein – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein – wenn man es wahrhaftig mit rechter Weisheit sieht: ‚Das ist nicht mein, das bin nicht ich, das ist nicht mein Selbst‘, dann ist man durch Nicht-Ergreifen befreit. ",
+  "sn22.72:1.12": "Auf diese Art erkennt und sieht man, sodass der Geist sich von Ich-Machen, Mein-Machen und Einbildung für diesen beseelten Körper und für alle äußeren Reize losmacht; und dass er über die Abgrenzung hinausgeht und friedvoll und gut befreit ist.“ … "
 }
