Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn1/sn1.20_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.20_translation-de-sabbamitta.json
@@ -50,7 +50,7 @@
   "sn1.20:22.2": "Bitte lehre mich diese Sache, sodass ich die ausführliche Bedeutung verstehen kann.“ ",
   "sn1.20:23.1": "„Wenn du denkst: ‚Ich bin gleich, ",
   "sn1.20:23.2": "besonders oder schlechter‘, gerätst du in Streitigkeiten. ",
-  "sn1.20:23.3": "Unerschütterlich angesichts der drei Abgrenzungen ",
+  "sn1.20:23.3": "Unerschütterlich angesichts der drei Unterscheidungen ",
   "sn1.20:23.4": "wirst du nicht denken: ‚Ich bin gleich oder besonders‘. ",
   "sn1.20:23.5": "Sag mir, ob du das verstehst, Geist.“ ",
   "sn1.20:24.1": "„Ich verstehe die ausführliche Bedeutung dieser kurzen Aussage des Buddha nicht. ",
