Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -66,5 +66,6 @@
   "mn3:6.2": "અહીં આદરણીયો, એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા,",
   "mn3:6.3": "જે વસ્તુઓનો ગુરૂએ ત્ચાગ કરવાનો કહ્યો હોય એનો ત્યાગ નથી કરતા,",
   "mn3:6.4": "તેઓ આળસુ, બેદરકાર, પાછળ રહી જવામાં પહેલા, અને એકાંતવાસની અવગણના કરનારા હોય છે.",
-  "mn3:6.5": "આ બાબતમાં ત્રણ કારણોના આધારે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે."
+  "mn3:6.5": "આ બાબતમાં ત્રણ કારણોના આધારે વરિષ્ઠ ભિક્ષુ નિંદાપાત્ર છે.",
+  "mn3:6.6": "‘એકાંતમાં રહેતા ગુરૂના શિષ્યો એકાંતવાસની શિક્ષા નથી ગ્રહણ કરતા’—"
 }
