Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -844,7 +844,7 @@
   "pli-tv-kd3:14.11.50": "The third chapter on entering the rainy-season residence is finished. ",
   "pli-tv-kd3:14.11.51": "This is the summary: ",
   "pli-tv-kd3:14.11.52": "“To enter and when, ",
-  "pli-tv-kd3:14.11.53": "How many and during the rains; ",
+  "pli-tv-kd3:14.11.53": "How many, and during the rains; ",
   "pli-tv-kd3:14.11.54": "And they did not want, deliberately, ",
   "pli-tv-kd3:14.11.55": "To postpone, lay follower. ",
   "pli-tv-kd3:14.11.56": "Sick and mother, father, ",
