Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -847,7 +847,7 @@
   "pli-tv-kd3:14.11.53": "How many, and during the rains; ",
   "pli-tv-kd3:14.11.54": "And they did not want, deliberately, ",
   "pli-tv-kd3:14.11.55": "To postpone, lay follower. ",
-  "pli-tv-kd3:14.11.56": "Sick and mother, father, ",
+  "pli-tv-kd3:14.11.56": "Sick, and mother, father, ",
   "pli-tv-kd3:14.11.57": "And brother, then a relative; ",
   "pli-tv-kd3:14.11.58": "One staying with the monks, dwelling, ",
   "pli-tv-kd3:14.11.59": "And also predatory, creeping animals. ",
