Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -856,7 +856,7 @@
   "pli-tv-kd3:14.11.62": "Swept away by water, it relocated, ",
   "pli-tv-kd3:14.11.63": "And majority, donors. ",
   "pli-tv-kd3:14.11.64": "Coarse or fine, suitable, ",
-  "pli-tv-kd3:14.11.65": "Medicine and attendant; ",
+  "pli-tv-kd3:14.11.65": "And medicine, with attendant; ",
   "pli-tv-kd3:14.11.66": "Woman, sex worker, and single woman, ",
   "pli-tv-kd3:14.11.67": "A _paṇḍaka_ and by relatives. ",
   "pli-tv-kd3:14.11.68": "King, criminals, scoundrels, treasure,  ",
