--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -859,8 +859,8 @@
   "pli-tv-kd3:14.11.65": "And medicine, with attendant; ",
   "pli-tv-kd3:14.11.66": "Woman, sex worker, and single woman, ",
   "pli-tv-kd3:14.11.67": "A _paṇḍaka_, and by a relative. ",
-  "pli-tv-kd3:14.11.68": "King, criminals, scoundrels, treasure,  ",
-  "pli-tv-kd3:14.11.69": "And eightfold on schism; ",
+  "pli-tv-kd3:14.11.68": "King, criminals, scoundrels, treasure, ",
+  "pli-tv-kd3:14.11.69": "And with eightfold on schism; ",
   "pli-tv-kd3:14.11.70": "A cowherd’s dwelling and a caravan and a boat, ",
   "pli-tv-kd3:14.11.71": "In a hollow and in a fork. ",
   "pli-tv-kd3:14.11.72": "Rains residence out in the open, ",
