--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -861,8 +861,8 @@
   "pli-tv-kd3:14.11.67": "A _paṇḍaka_, and by a relative. ",
   "pli-tv-kd3:14.11.68": "King, criminals, scoundrels, treasure, ",
   "pli-tv-kd3:14.11.69": "And with eightfold on schism; ",
-  "pli-tv-kd3:14.11.70": "A cowherd’s dwelling and a caravan and a boat, ",
-  "pli-tv-kd3:14.11.71": "In a hollow and in a fork. ",
+  "pli-tv-kd3:14.11.70": "A cowherd’s dwelling, and a caravan, and a boat, ",
+  "pli-tv-kd3:14.11.71": "In a hollow, and in a fork. ",
   "pli-tv-kd3:14.11.72": "Rains residence out in the open, ",
   "pli-tv-kd3:14.11.73": "And without a dwelling; ",
   "pli-tv-kd3:14.11.74": "Charnel house and under a sunshade, ",
