Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -865,11 +865,11 @@
   "pli-tv-kd3:14.11.71": "In a hollow, and in a fork. ",
   "pli-tv-kd3:14.11.72": "Rains residence out in the open, ",
   "pli-tv-kd3:14.11.73": "And without a dwelling; ",
-  "pli-tv-kd3:14.11.74": "Charnel house and under a sunshade, ",
+  "pli-tv-kd3:14.11.74": "Charnel house, and under a sunshade, ",
   "pli-tv-kd3:14.11.75": "And they entered in a large earthenware pot. ",
   "pli-tv-kd3:14.11.76": "Agreement, having agreed, ",
   "pli-tv-kd3:14.11.77": "And observance days outside; ",
-  "pli-tv-kd3:14.11.78": "First and second ",
+  "pli-tv-kd3:14.11.78": "First, second, ",
   "pli-tv-kd3:14.11.79": "Should be understood according to the same method. ",
   "pli-tv-kd3:14.11.80": "He departs without business, ",
   "pli-tv-kd3:14.11.81": "And the same with business; ",
