--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -878,7 +878,7 @@
   "pli-tv-kd3:14.11.84": "And returned within seven days, ",
   "pli-tv-kd3:14.11.85": "Whether he returns or not; ",
   "pli-tv-kd3:14.11.86": "Because of the gaps in the summary of topics, ",
-  "pli-tv-kd3:14.11.87": "One attends carefully to the way of the passages of the Canonical text.” ",
+  "pli-tv-kd3:14.11.87": "One should attend carefully to the way of the passages of the Canonical text.” ",
   "pli-tv-kd3:14.11.88": "In this chapter there are fifty-two topics. ",
-  "pli-tv-kd3:14.11.89": "The chapter on entering the rainy-season residence is finished."
+  "pli-tv-kd3:14.11.89": "The chapter on entering the rainy-season residence is finished. "
 }
