Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1177,7 +1177,7 @@
   "pli-tv-kd4:18.6.5": "The fourth chapter on the invitation ceremony is finished. ",
   "pli-tv-kd4:18.6.6": "This is the summary: ",
   "pli-tv-kd4:18.6.7": "“Completed rains residence in Kosala, ",
-  "pli-tv-kd4:18.6.8": "They went to see the Teacher, ",
+  "pli-tv-kd4:18.6.8": "They went to see the Teacher; ",
   "pli-tv-kd4:18.6.9": "Living uncomfortably like animals, ",
   "pli-tv-kd4:18.6.10": "One another in the proper way. ",
   "pli-tv-kd4:18.6.11": "Inviting, and respect, ",
