Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1180,7 +1180,7 @@
   "pli-tv-kd4:18.6.8": "They went to see the Teacher; ",
   "pli-tv-kd4:18.6.9": "Living uncomfortably like animals, ",
   "pli-tv-kd4:18.6.10": "One another in the proper way. ",
-  "pli-tv-kd4:18.6.11": "Inviting, and respect, ",
+  "pli-tv-kd4:18.6.11": "Inviting, and in the seat, ",
   "pli-tv-kd4:18.6.12": "Legal procedure, sick, relatives, ",
   "pli-tv-kd4:18.6.13": "Kings, and bandits, and scoundrels, ",
   "pli-tv-kd4:18.6.14": "So enemies of monks. ",
