--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1181,11 +1181,11 @@
   "pli-tv-kd4:18.6.9": "Living uncomfortably like animals, ",
   "pli-tv-kd4:18.6.10": "One another in the proper way. ",
   "pli-tv-kd4:18.6.11": "Inviting, and in the seat, ",
-  "pli-tv-kd4:18.6.12": "Legal procedure, sick, relatives, ",
-  "pli-tv-kd4:18.6.13": "Kings, and bandits, and scoundrels, ",
+  "pli-tv-kd4:18.6.12": "Legal procedure, sick, relatives; ",
+  "pli-tv-kd4:18.6.13": "King, and bandits, and scoundrels, ",
   "pli-tv-kd4:18.6.14": "So enemies of monks. ",
   "pli-tv-kd4:18.6.15": "Five, four, three, two, one, ",
-  "pli-tv-kd4:18.6.16": "Committed, unsure, remembered, ",
+  "pli-tv-kd4:18.6.16": "Committed, unsure, he remembered; ",
   "pli-tv-kd4:18.6.17": "The whole Sangha, unsure, ",
   "pli-tv-kd4:18.6.18": "Greater, and equal, smaller. ",
   "pli-tv-kd4:18.6.19": "Resident, fourteenth, ",
