Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1188,12 +1188,12 @@
   "pli-tv-kd4:18.6.16": "Committed, unsure, he remembered; ",
   "pli-tv-kd4:18.6.17": "The whole Sangha, unsure, ",
   "pli-tv-kd4:18.6.18": "Greater, and equal, smaller. ",
-  "pli-tv-kd4:18.6.19": "Resident, fourteenth, ",
-  "pli-tv-kd4:18.6.20": "Characteristics, the same community, both, ",
-  "pli-tv-kd4:18.6.21": "May go, not, with seated, ",
+  "pli-tv-kd4:18.6.19": "Residents, fourteenth, ",
+  "pli-tv-kd4:18.6.20": "Characteristics, belonging to a Buddhist sect, both; ",
+  "pli-tv-kd4:18.6.21": "May go, not with seated, ",
   "pli-tv-kd4:18.6.22": "About giving consent, invitation. ",
   "pli-tv-kd4:18.6.23": "With primitive tribes, spent, storm, ",
-  "pli-tv-kd4:18.6.24": "And threat, invitation, ",
+  "pli-tv-kd4:18.6.24": "And threat, invitation; ",
   "pli-tv-kd4:18.6.25": "They refused, before their, ",
   "pli-tv-kd4:18.6.26": "And isn’t canceled, a monk’s. ",
   "pli-tv-kd4:18.6.27": "ʻOr whyʼ, and what, ",
