Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -1197,10 +1197,10 @@
   "pli-tv-kd4:18.6.25": "They refused, before their, ",
   "pli-tv-kd4:18.6.26": "And isn’t canceled, a monk’s. ",
   "pli-tv-kd4:18.6.27": "ʻOr whyʼ, and what, ",
-  "pli-tv-kd4:18.6.28": "Because of the seen, the heard, the suspected, ",
+  "pli-tv-kd4:18.6.28": "Because of the seen, the heard, the suspected; ",
   "pli-tv-kd4:18.6.29": "The accuser, and the accused, ",
-  "pli-tv-kd4:18.6.30": "Serious offense, offense, quarrel, ",
-  "pli-tv-kd4:18.6.31": "And agreements about the invitation, ",
+  "pli-tv-kd4:18.6.30": "Serious offense, offense, quarrel; ",
+  "pli-tv-kd4:18.6.31": "And agreement about the invitation, ",
   "pli-tv-kd4:18.6.32": "One without authority, should invite.” ",
   "pli-tv-kd4:18.6.33": "In this chapter there are forty-six topics. ",
   "pli-tv-kd4:18.6.34": "The chapter on the invitation ceremony is finished."
