--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -536,7 +536,7 @@
   "pli-tv-kd5:13.13.12": "The fifth chapter on skins is finished. ",
   "pli-tv-kd5:13.13.13": "This is the summary:",
   "pli-tv-kd5:13.13.14": "“The King of Magadha and Soṇa, ",
-  "pli-tv-kd5:13.13.15": "Eighty thousand chiefs, ",
+  "pli-tv-kd5:13.13.15": "Eighty thousand chiefs; ",
   "pli-tv-kd5:13.13.16": "Sāgata on the Vulture Peak, ",
   "pli-tv-kd5:13.13.17": "Showed much that was super-human.  ",
   "pli-tv-kd5:13.13.18": "Going forth, energetic, they cracked, ",
