Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -540,15 +540,15 @@
   "pli-tv-kd5:13.13.16": "Sāgata on the Vulture Peak, ",
   "pli-tv-kd5:13.13.17": "Showed much that was super-human. ",
   "pli-tv-kd5:13.13.18": "Going forth, energetic, they cracked, ",
-  "pli-tv-kd5:13.13.19": "Lute, single-layered soles, ",
+  "pli-tv-kd5:13.13.19": "Lute, single-layered soles; ",
   "pli-tv-kd5:13.13.20": "Blue, yellow, red, ",
   "pli-tv-kd5:13.13.21": "Magenta, and just black. ",
   "pli-tv-kd5:13.13.22": "Orange, beige, ",
-  "pli-tv-kd5:13.13.23": "And straps are prohibited, ",
+  "pli-tv-kd5:13.13.23": "And he prohibited straps; ",
   "pli-tv-kd5:13.13.24": "Leather, and enclosing, covering, ",
   "pli-tv-kd5:13.13.25": "Cotton, partridge, ram, goat. ",
   "pli-tv-kd5:13.13.26": "Scorpion, peacock, and various, ",
-  "pli-tv-kd5:13.13.27": "Lion, and tiger, leopard, ",
+  "pli-tv-kd5:13.13.27": "Lion, and tiger, leopard; ",
   "pli-tv-kd5:13.13.28": "Deer, otter, and cat, ",
   "pli-tv-kd5:13.13.29": "Squirrel, bat, decorated. ",
   "pli-tv-kd5:13.13.30": "Cracked, sandals, corn, ",
