Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -552,17 +552,17 @@
   "pli-tv-kd5:13.13.28": "Deer, otter, and cat, ",
   "pli-tv-kd5:13.13.29": "Squirrel, bat, decorated. ",
   "pli-tv-kd5:13.13.30": "Cracked, sandals, corn, ",
-  "pli-tv-kd5:13.13.31": "Washed, stumps, clacking, ",
+  "pli-tv-kd5:13.13.31": "Washed, stumps, clacking; ",
   "pli-tv-kd5:13.13.32": "Palm, bamboo, and just grass, ",
   "pli-tv-kd5:13.13.33": "Reed, fish-tail palm. ",
   "pli-tv-kd5:13.13.34": "Grass, wool, gold, ",
-  "pli-tv-kd5:13.13.35": "Silver, gems, beryl, ",
-  "pli-tv-kd5:13.13.36": "Crystal, and bronze, glass ",
+  "pli-tv-kd5:13.13.35": "Silver, gems, beryl; ",
+  "pli-tv-kd5:13.13.36": "Crystal, bronze, and glass, ",
   "pli-tv-kd5:13.13.37": "Tin, and lead, copper. ",
   "pli-tv-kd5:13.13.38": "Cow, vehicle, and sick, ",
-  "pli-tv-kd5:13.13.39": "pulled by men, palanquin, ",
+  "pli-tv-kd5:13.13.39": "pulled by men, palanquin; ",
   "pli-tv-kd5:13.13.40": "Beds, luxurious skins, ",
-  "pli-tv-kd5:13.13.41": "And cattle hide, who is bad. ",
+  "pli-tv-kd5:13.13.41": "And the bad one with a cattle hide. ",
   "pli-tv-kd5:13.13.42": "Of householders, straps of leather, ",
   "pli-tv-kd5:13.13.43": "They enter, being sick, ",
   "pli-tv-kd5:13.13.44": "Mahākaccāyana, Soṇa, ",
