Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -564,14 +564,14 @@
   "pli-tv-kd5:13.13.40": "Beds, luxurious skins, ",
   "pli-tv-kd5:13.13.41": "And the bad one with a cattle hide. ",
   "pli-tv-kd5:13.13.42": "Of householders, straps of leather, ",
-  "pli-tv-kd5:13.13.43": "They enter, being sick, ",
+  "pli-tv-kd5:13.13.43": "They enter, being sick; ",
   "pli-tv-kd5:13.13.44": "Mahākaccāyana, Soṇa, ",
   "pli-tv-kd5:13.13.45": "Chanted the Chapter of Eights. ",
   "pli-tv-kd5:13.13.46": "Full ordination through five, ",
-  "pli-tv-kd5:13.13.47": "Multi-layered, unrestricted bathing, ",
-  "pli-tv-kd5:13.13.48": "Rugs made of skin, he allowed, ",
-  "pli-tv-kd5:13.13.49": "Not start the counting until,",
-  "pli-tv-kd5:13.13.50": "I, the leader, did five favours,",
+  "pli-tv-kd5:13.13.47": "Multi-layered, unrestricted bathing; ",
+  "pli-tv-kd5:13.13.48": "He allowed rugs made of skin, ",
+  "pli-tv-kd5:13.13.49": "Not start the counting until; ",
+  "pli-tv-kd5:13.13.50": "The leader did these five favours,",
   "pli-tv-kd5:13.13.51": "For Soṇa, the senior monk.” ",
   "pli-tv-kd5:13.13.52": "In this chapter there are sixty-three topics. ",
   "pli-tv-kd5:13.13.53": "The chapter on skins is finished."
