Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1385,8 +1385,8 @@
   "pli-tv-kd6:40.3.18": "Head oil, and nose; ",
   "pli-tv-kd6:40.3.19": "Nose dropper, and smoke, ",
   "pli-tv-kd6:40.3.20": "And tube, lid, bag. ",
-  "pli-tv-kd6:40.3.21": "Concoction of oil, and alcohol, ",
-  "pli-tv-kd6:40.3.22": "Prohibited, external use; ",
+  "pli-tv-kd6:40.3.21": "In a concoction of oil, and alcohol, ",
+  "pli-tv-kd6:40.3.22": "Too much, external use; ",
   "pli-tv-kd6:40.3.23": "Vessel, sweat, and herbs, ",
   "pli-tv-kd6:40.3.24": "Heavy, and so hemp water. ",
   "pli-tv-kd6:40.3.25": "Bathtub, and blood, ",
