Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1394,7 +1394,7 @@
   "pli-tv-kd6:40.3.27": "Foot salve, knife, and bitter, ",
   "pli-tv-kd6:40.3.28": "Sesame paste, flour paste. ",
   "pli-tv-kd6:40.3.29": "Cloth, and mustard-seed powder, ",
-  "pli-tv-kd6:40.3.30": "Smoke and razor; ",
+  "pli-tv-kd6:40.3.30": "Smoke, and with a razor; ",
   "pli-tv-kd6:40.3.31": "Sore oil, bandage, ",
   "pli-tv-kd6:40.3.32": "And filthy, receiving. ",
   "pli-tv-kd6:40.3.33": "Feces, excreting, and mixture, ",
