Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1402,7 +1402,7 @@
   "pli-tv-kd6:40.3.35": "Scented, and purgative, ",
   "pli-tv-kd6:40.3.36": "Clear congee, mung-bean broth, oily mung-bean broth. ",
   "pli-tv-kd6:40.3.37": "Meat broth, hillside, ",
-  "pli-tv-kd6:40.3.38": "Monastery, seven days; ",
+  "pli-tv-kd6:40.3.38": "Monastery, and with seven days; ",
   "pli-tv-kd6:40.3.39": "Sugar, mung beans, and purgative, ",
   "pli-tv-kd6:40.3.40": "Cooking oneself, reheating. ",
   "pli-tv-kd6:40.3.41": "Allowed again, short of food, ",
