Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1405,7 +1405,7 @@
   "pli-tv-kd6:40.3.38": "Monastery, and with seven days; ",
   "pli-tv-kd6:40.3.39": "Sugar, mung beans, and purgative, ",
   "pli-tv-kd6:40.3.40": "Cooking oneself, reheating. ",
-  "pli-tv-kd6:40.3.41": "Allowed again, short of food, ",
+  "pli-tv-kd6:40.3.41": "He allowed again, when short of food, ",
   "pli-tv-kd6:40.3.42": "And fruit, sesame, fresh food; ",
   "pli-tv-kd6:40.3.43": "Before eating, fever, ",
   "pli-tv-kd6:40.3.44": "And removed, hemorrhoids. ",
