--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1420,9 +1420,9 @@
   "pli-tv-kd6:40.3.53": "Ganges, Koṭi, speaking the truths, ",
   "pli-tv-kd6:40.3.54": "And Ambapālī, Licchavī; ",
   "pli-tv-kd6:40.3.55": "Killed for, plenty of food, ",
-  "pli-tv-kd6:40.3.56": "Prohibited again, ",
+  "pli-tv-kd6:40.3.56": "He prohibited again. ",
   "pli-tv-kd6:40.3.57": "Storm, Yasa, and Meṇḍaka, ",
-  "pli-tv-kd6:40.3.58": "Product of a cow, and provisions; ",
+  "pli-tv-kd6:40.3.58": "Product of a cow, and with provisions; ",
   "pli-tv-kd6:40.3.59": "Keṇi, mango, rose-apple, bananas with seeds, ",
   "pli-tv-kd6:40.3.60": "Seedless bananas, licorice, grapes, lotus tubers. ",
   "pli-tv-kd6:40.3.61": "Falsa fruit, potherb, flour, ",
