Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
@@ -630,12 +630,12 @@
   "pli-tv-kd7:13.2.18": "Without informing, going without taking, ",
   "pli-tv-kd7:13.2.19": "Just so eating in a group. ",
   "pli-tv-kd7:13.2.20": "And as much as you need, the given, ",
-  "pli-tv-kd7:13.2.21": "Is for those who have doen the robe-maling ceremony; ",
+  "pli-tv-kd7:13.2.21": "Is for those who have done the robe-making ceremony; ",
   "pli-tv-kd7:13.2.22": "Motion, just thus performed, ",
   "pli-tv-kd7:13.2.23": "Just thus not performed. ",
   "pli-tv-kd7:13.2.24": "Marking, and just washing, ",
   "pli-tv-kd7:13.2.25": "And planning, cutting; ",
-  "pli-tv-kd7:13.2.26": "Tacking, seam, strip of cloth, ",
+  "pli-tv-kd7:13.2.26": "Tacking, hem, strip of cloth, ",
   "pli-tv-kd7:13.2.27": "Strengthening, border lengthwise. ",
   "pli-tv-kd7:13.2.28": "Border crosswise, patch, ",
   "pli-tv-kd7:13.2.29": "Dyeing, indication, hint; ",
@@ -645,7 +645,7 @@
   "pli-tv-kd7:13.2.33": "With cut sections with panels; ",
   "pli-tv-kd7:13.2.34": "Not apart from an individual, correctly, ",
   "pli-tv-kd7:13.2.35": "He appreciates outside the monastery zone. ",
-  "pli-tv-kd7:13.2.36": "The robe-maling ceremony is not performed, ",
+  "pli-tv-kd7:13.2.36": "The robe-making ceremony is not performed, ",
   "pli-tv-kd7:13.2.37": "Thus it was taught by the Buddha; ",
   "pli-tv-kd7:13.2.38": "Brand new, nearly new, old, ",
   "pli-tv-kd7:13.2.39": "Rag, and from a shop. ",
@@ -659,7 +659,7 @@
   "pli-tv-kd7:13.2.47": "He appreciates within the monastery zone. ",
   "pli-tv-kd7:13.2.48": "In this way is the robe-making ceremony performed, ",
   "pli-tv-kd7:13.2.49": "Eight key phrases for ending; ",
-  "pli-tv-kd7:13.2.50": "Departing, finished,   ",
+  "pli-tv-kd7:13.2.50": "Departing, finished, ",
   "pli-tv-kd7:13.2.51": "And decision, lost. ",
   "pli-tv-kd7:13.2.52": "Hearing, disappointed expectation, ",
   "pli-tv-kd7:13.2.53": "Monastery zone, ending together as the eighth; ",
@@ -673,7 +673,7 @@
   "pli-tv-kd7:13.2.61": "For him the robe season comes to an end when it’s finished; ",
   "pli-tv-kd7:13.2.62": "Takes outside the monastery zone, thinking, “Just not, ",
   "pli-tv-kd7:13.2.63": "And I won’t return.” ",
-  "pli-tv-kd7:13.2.64": "So, for him the robe season would end, ",
+  "pli-tv-kd7:13.2.64": "So, for him the robe season comes to an end, ",
   "pli-tv-kd7:13.2.65": "When he decides; ",
   "pli-tv-kd7:13.2.66": "He goes taking robe-cloth, ",
   "pli-tv-kd7:13.2.67": "Outside the monastery zone he thinks: ",
@@ -689,7 +689,7 @@
   "pli-tv-kd7:13.2.77": "When he hears about it; ",
   "pli-tv-kd7:13.2.78": "Taking it, he goes, thinking, “I’ll return”, ",
   "pli-tv-kd7:13.2.79": "He has a robe made outside. ",
-  "pli-tv-kd7:13.2.80": "When the robe is finished, outside ",
+  "pli-tv-kd7:13.2.80": "When the robe is finished, outside, ",
   "pli-tv-kd7:13.2.81": "He remains, the robe season comes to an end; ",
   "pli-tv-kd7:13.2.82": "So, for him the robe season comes to an end, ",
   "pli-tv-kd7:13.2.83": "When he is outside the monastery zone. ",
