--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
@@ -690,13 +690,13 @@
   "pli-tv-kd7:13.2.78": "Taking it, he goes, thinking, “I’ll return”, ",
   "pli-tv-kd7:13.2.79": "He has a robe made outside. ",
   "pli-tv-kd7:13.2.80": "When the robe is finished, outside, ",
-  "pli-tv-kd7:13.2.81": "He remains, the robe season comes to an end; ",
+  "pli-tv-kd7:13.2.81": "He remains until the robe season comes to an end; ",
   "pli-tv-kd7:13.2.82": "So, for him the robe season comes to an end, ",
   "pli-tv-kd7:13.2.83": "When he is outside the monastery zone. ",
   "pli-tv-kd7:13.2.84": "Taking it, he goes, thinking, “I’ll return”, ",
   "pli-tv-kd7:13.2.85": "He has a robe made outside; ",
   "pli-tv-kd7:13.2.86": "When the robe is finished, thinking, “I’ll return”, ",
-  "pli-tv-kd7:13.2.87": "The robe season comes to an end. ",
+  "pli-tv-kd7:13.2.87": "The robe season comes to an end together with. ",
   "pli-tv-kd7:13.2.88": "So, for him the robe season comes to an end, ",
   "pli-tv-kd7:13.2.89": "Together with the monks; ",
   "pli-tv-kd7:13.2.90": "And takes, with, ",
