--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd7_translation-en-brahmali.json
@@ -727,7 +727,7 @@
   "pli-tv-kd7:13.2.115": "Are all fifteenfold. ",
   "pli-tv-kd7:13.2.116": "And not as expected, as expected, ",
   "pli-tv-kd7:13.2.117": "And business those three; ",
-  "pli-tv-kd7:13.2.118": "From reason one should here understand, ",
+  "pli-tv-kd7:13.2.118": "By this method one should here understand, ",
   "pli-tv-kd7:13.2.119": "Three, twelve, twelve. ",
   "pli-tv-kd7:13.2.120": "Here the nine on without taking, ",
   "pli-tv-kd7:13.2.121": "Fivefold on good meditation there; ",
