Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1257,7 +1257,7 @@
   "pli-tv-kd8:32.1.24": "He went to Takkasilā, ",
   "pli-tv-kd8:32.1.25": "Having learnt, a great physician; ",
   "pli-tv-kd8:32.1.26": "A seven-year illness, ",
-  "pli-tv-kd8:32.1.27": "By nose treatment, did not lie down. ",
+  "pli-tv-kd8:32.1.27": "He cured by nose treatment. ",
   "pli-tv-kd8:32.1.28": "The king’s hemorrhoids, ",
   "pli-tv-kd8:32.1.29": "Applied ointment; ",
   "pli-tv-kd8:32.1.30": "Attended on me and the harem, ",
