--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1265,7 +1265,7 @@
   "pli-tv-kd8:32.1.32": "And the merchant of Rājagaha, ",
   "pli-tv-kd8:32.1.33": "Treated the twisted gut; ",
   "pli-tv-kd8:32.1.34": "The great illness of Pajjota, ",
-  "pli-tv-kd8:32.1.35": "Executing by him, did not lie down. ",
+  "pli-tv-kd8:32.1.35": "He cured with a drink of ghee. ",
   "pli-tv-kd8:32.1.36": "And service, valuable cloth, ",
   "pli-tv-kd8:32.1.37": "Full of, he oiled; ",
   "pli-tv-kd8:32.1.38": "With three handfuls of lotus flowers, ",
