Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1270,7 +1270,7 @@
   "pli-tv-kd8:32.1.37": "Full of, he oiled; ",
   "pli-tv-kd8:32.1.38": "With three handfuls of lotus flowers, ",
   "pli-tv-kd8:32.1.39": "Thirty purgings exactly. ",
-  "pli-tv-kd8:32.1.40": "He asked for an ordinary favor, ",
+  "pli-tv-kd8:32.1.40": "He asked for a blameless favor, ",
   "pli-tv-kd8:32.1.41": "And he received the valuable cloths; ",
   "pli-tv-kd8:32.1.42": "And robes given by householders, ",
   "pli-tv-kd8:32.1.43": "Was allowed by the Buddha. ",
