Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1274,7 +1274,7 @@
   "pli-tv-kd8:32.1.41": "And he received the valuable cloths; ",
   "pli-tv-kd8:32.1.42": "And robes given by householders, ",
   "pli-tv-kd8:32.1.43": "Was allowed by the Buddha. ",
-  "pli-tv-kd8:32.1.44": "In the country of Rājagaha, ",
+  "pli-tv-kd8:32.1.44": "In Rājagaha, in the country, ",
   "pli-tv-kd8:32.1.45": "Many robes were given; ",
   "pli-tv-kd8:32.1.46": "A fleecy robe, and silken, ",
   "pli-tv-kd8:32.1.47": "Woolen fleecy robe, valuable Kāsī cloth. ",
