Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1290,7 +1290,7 @@
   "pli-tv-kd8:32.1.57": "How should a share be given; ",
   "pli-tv-kd8:32.1.58": "With dung, cold water, ",
   "pli-tv-kd8:32.1.59": "Boiled over, they did not know. ",
-  "pli-tv-kd8:32.1.60": "Removing, and vessel, ",
+  "pli-tv-kd8:32.1.60": "Tilting, and vessel, ",
   "pli-tv-kd8:32.1.61": "And in a basin, and on the ground; ",
   "pli-tv-kd8:32.1.62": "Termites, in the middle, they became worn, ",
   "pli-tv-kd8:32.1.63": "From one side, and with starch. ",
