Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1301,7 +1301,7 @@
   "pli-tv-kd8:32.1.68": "With another extra, ",
   "pli-tv-kd8:32.1.69": "Was given, and just a hole; ",
   "pli-tv-kd8:32.1.70": "Four-continent, she asked for a favor, ",
-  "pli-tv-kd8:32.1.71": "To give a rain-season robes, ",
+  "pli-tv-kd8:32.1.71": "To give a rain-season robes. ",
   "pli-tv-kd8:32.1.72": "And visiting, departing, and sick, ",
   "pli-tv-kd8:32.1.73": "And nurse, medicine, ",
   "pli-tv-kd8:32.1.74": "Regular, and bathing robe. ",
