Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd8_translation-en-brahmali.json
@@ -1303,8 +1303,8 @@
   "pli-tv-kd8:32.1.70": "Four-continent, she asked for a favor, ",
   "pli-tv-kd8:32.1.71": "To give a rain-season robes. ",
   "pli-tv-kd8:32.1.72": "And visiting, departing, and sick, ",
-  "pli-tv-kd8:32.1.73": "And nurse, medicine, ",
-  "pli-tv-kd8:32.1.74": "Regular, and bathing robe. ",
+  "pli-tv-kd8:32.1.73": "And nurse, medicine; ",
+  "pli-tv-kd8:32.1.74": "Regular, and bathing robe, ",
   "pli-tv-kd8:32.1.75": "Fine, too small. ",
   "pli-tv-kd8:32.1.76": "Carbuncles, handkerchief, linen, ",
   "pli-tv-kd8:32.1.77": "Enough, determining; ",
