--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1561,7 +1561,7 @@
   "pli-tv-kd9:7.20.119": "Prohibited the illegitimate. ",
   "pli-tv-kd9:7.20.120": "A procedure deficient in motion, ",
   "pli-tv-kd9:7.20.121": "But complete in announcement; ",
-  "pli-tv-kd9:7.20.122": "One deficient in announcement ",
+  "pli-tv-kd9:7.20.122": "One deficient in announcement, ",
   "pli-tv-kd9:7.20.123": "But complete in motion; ",
   "pli-tv-kd9:7.20.124": "And one deficient in both, ",
   "pli-tv-kd9:7.20.125": "And not according to the Teaching ",
