--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1562,9 +1562,9 @@
   "pli-tv-kd9:7.20.120": "A procedure deficient in motion, ",
   "pli-tv-kd9:7.20.121": "But complete in announcement; ",
   "pli-tv-kd9:7.20.122": "One deficient in announcement, ",
-  "pli-tv-kd9:7.20.123": "But complete in motion; ",
+  "pli-tv-kd9:7.20.123": "But complete in motion. ",
   "pli-tv-kd9:7.20.124": "And one deficient in both, ",
-  "pli-tv-kd9:7.20.125": "And not according to the Teaching ",
+  "pli-tv-kd9:7.20.125": "And not according to the Teaching; ",
   "pli-tv-kd9:7.20.126": "The Monastic Law, the Teacher, objected to, ",
   "pli-tv-kd9:7.20.127": "Are reversible, unfit to stand. ",
   "pli-tv-kd9:7.20.128": "Illegitimate with incomplete assembly, with unanimous assembly, ",
