--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1576,13 +1576,13 @@
   "pli-tv-kd9:7.20.134": "And a group of more than twenty, ",
   "pli-tv-kd9:7.20.135": "Thus a five-fold Sangha. ",
   "pli-tv-kd9:7.20.136": "Apart from ordination, ",
-  "pli-tv-kd9:7.20.137": "And the procedure of invitation, ",
+  "pli-tv-kd9:7.20.137": "And the procedure of invitation; ",
   "pli-tv-kd9:7.20.138": "Together with the procedure of rehabilitation, ",
   "pli-tv-kd9:7.20.139": "Is done by a group of four. ",
   "pli-tv-kd9:7.20.140": "Apart from two procedures, ",
-  "pli-tv-kd9:7.20.141": "Ordination in the Middle Country,  ",
-  "pli-tv-kd9:7.20.142": "Rehabilitation, a group of five. ",
-  "pli-tv-kd9:7.20.143": "Doers of all procedures, ",
+  "pli-tv-kd9:7.20.141": "Ordination in the Middle Country; ",
+  "pli-tv-kd9:7.20.142": "Rehabilitation, a group of five, ",
+  "pli-tv-kd9:7.20.143": "Doers of all procedures. ",
   "pli-tv-kd9:7.20.144": "Apart from rehabilitation, ",
   "pli-tv-kd9:7.20.145": "Is a group of ten monks. ",
   "pli-tv-kd9:7.20.146": "A sangha that does all procedures, ",
