Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1590,7 +1590,7 @@
   "pli-tv-kd9:7.20.148": "A nun, and a trainee nun, ",
   "pli-tv-kd9:7.20.149": "A novice monk, a novice nun; ",
   "pli-tv-kd9:7.20.150": "Who has renounced, the worst kind of offense, ",
-  "pli-tv-kd9:7.20.151": "Ejected for not seeing an offense, ",
+  "pli-tv-kd9:7.20.151": "Ejected for not seeing an offense. ",
   "pli-tv-kd9:7.20.152": "For not making amends, for a bad view, ",
   "pli-tv-kd9:7.20.153": "A paṇḍaka, one living together by theft; ",
   "pli-tv-kd9:7.20.154": "Monastics of another religion, animal, ",
