Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1594,7 +1594,7 @@
   "pli-tv-kd9:7.20.152": "For not making amends, for a bad view, ",
   "pli-tv-kd9:7.20.153": "A paṇḍaka, one living together by theft; ",
   "pli-tv-kd9:7.20.154": "Monastics of another religion, animal, ",
-  "pli-tv-kd9:7.20.155": "Killer of mother, and father,  ",
+  "pli-tv-kd9:7.20.155": "Killer of mother, and father. ",
   "pli-tv-kd9:7.20.156": "A perfected one, a rapist of a nun, ",
   "pli-tv-kd9:7.20.157": "A schismatic, a shedder of blood; ",
   "pli-tv-kd9:7.20.158": "A hermaphrodite, a different sect, ",
