--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1608,7 +1608,7 @@
   "pli-tv-kd9:7.20.166": "Or send to the beginning, give trial, rehabilitate, ",
   "pli-tv-kd9:7.20.167": "It's invalid, not to be done. ",
   "pli-tv-kd9:7.20.168": "One deserving sending back, deserving trial, on trial, ",
-  "pli-tv-kd9:7.20.169": "And even deserving rehabilitation, ",
+  "pli-tv-kd9:7.20.169": "And even deserving rehabilitation; ",
   "pli-tv-kd9:7.20.170": "These five cannot do a procedure, ",
   "pli-tv-kd9:7.20.171": "Explained the Fully Awakened One. ",
   "pli-tv-kd9:7.20.172": "A nun, and a trainee nun, ",
