--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1614,7 +1614,7 @@
   "pli-tv-kd9:7.20.172": "A nun, and a trainee nun, ",
   "pli-tv-kd9:7.20.173": "A novice monk, a novice nun; ",
   "pli-tv-kd9:7.20.174": "Who has renounced, the worst kind, insane, ",
-  "pli-tv-kd9:7.20.175": "Deranged, pain, not seeing, ",
+  "pli-tv-kd9:7.20.175": "Deranged, pain, not seeing. ",
   "pli-tv-kd9:7.20.176": "Not making amends, a bad view, ",
   "pli-tv-kd9:7.20.177": "And also a _paṇḍaka_, hermaphrodite; ",
   "pli-tv-kd9:7.20.178": "One from a different Buddhist sect, monastery zone, ",
