--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1619,7 +1619,7 @@
   "pli-tv-kd9:7.20.177": "And also a _paṇḍaka_, hermaphrodite; ",
   "pli-tv-kd9:7.20.178": "One from a different Buddhist sect, monastery zone, ",
   "pli-tv-kd9:7.20.179": "Air, and the subject of the procedure. ",
-  "pli-tv-kd9:7.20.180": "Of these eighteen",
+  "pli-tv-kd9:7.20.180": "Of these eighteen, ",
   "pli-tv-kd9:7.20.181": "An objection is invalid; ",
   "pli-tv-kd9:7.20.182": "Of a regular monk, ",
   "pli-tv-kd9:7.20.183": "An objection is valid. ",
