Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1686,7 +1686,7 @@
   "pli-tv-kd9:7.20.244": "Also incomplete assembly with legitimate-like, ",
   "pli-tv-kd9:7.20.245": "So did a unanimous assembly; ",
   "pli-tv-kd9:7.20.246": "And a unanimous assembly with illegitimate, ",
-  "pli-tv-kd9:7.20.247": "And an incomplete assembly with legitimate, ",
+  "pli-tv-kd9:7.20.247": "And an incomplete assembly with legitimate. ",
   "pli-tv-kd9:7.20.248": "And incomplete assembly with legitimate-like, ",
   "pli-tv-kd9:7.20.249": "And unanimous assembly, in these cases; ",
   "pli-tv-kd9:7.20.250": "Having done the basis one by one, ",
