--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1713,7 +1713,7 @@
   "pli-tv-kd9:7.20.271": "Those monks speak in accordance with the Teaching. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure; ",
-  "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting ",
+  "pli-tv-kd9:7.20.274": "The Great Sage declared the lifting, ",
   "pli-tv-kd9:7.20.275": "Like a surgeon applies the medicine.” ",
   "pli-tv-kd9:7.20.276": "In this chapter there are thirty-six topics. ",
   "pli-tv-kd9:7.20.277": "The chapter connected with Campā is finished."
