Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pj/pli-tv-bu-vb-pj4_translation-en-brahmali.json
@@ -1129,7 +1129,7 @@
   "pli-tv-bu-vb-pj4:8.7.7": "“There’s no offense entailing expulsion, ",
   "pli-tv-bu-vb-pj4:8.7.8": "but there’s a serious offense.” ",
   "pli-tv-bu-vb-pj4:8.7.9": "At one time a monk said to a lay follower, ",
-  "pli-tv-bu-vb-pj4:8.7.10": "“The one you support with with robe-cloth, almsfood, a dwelling, and medicines, he’s a perfected one.” ",
+  "pli-tv-bu-vb-pj4:8.7.10": "“The one you support with with robe-cloth, almsfood, a dwelling, and medicinal supplies, he’s a perfected one.” ",
   "pli-tv-bu-vb-pj4:8.7.11": "He was the one who was supported in that way. ",
   "pli-tv-bu-vb-pj4:8.7.12": "He became anxious … ",
   "pli-tv-bu-vb-pj4:8.7.13": "“What were you thinking, monk?” ",
