--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc21_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc21_translation-en-brahmali.json
@@ -52,7 +52,7 @@
   "pli-tv-bu-vb-pc21:1.44.1": "‘If a monk who has not been appointed instructs the nuns, he commits an offense entailing confession.’” ",
   "pli-tv-bu-vb-pc21:1.45": "In this way the Buddha laid down this training rule for the monks. ",
   "pli-tv-bu-vb-pc21:2.0": "Second sub-story ",
-  "pli-tv-bu-vb-pc21:2.1": "After being appointed to do so, the senior monks who instructed the nuns still received robe-cloth, almsfood, dwellings, and medicines. ",
+  "pli-tv-bu-vb-pc21:2.1": "After being appointed to do so, the senior monks who instructed the nuns still received robe-cloth, almsfood, dwellings, and medicinal supplies. ",
   "pli-tv-bu-vb-pc21:2.2": "When they found out about this, the monks from the group of six said, ",
   "pli-tv-bu-vb-pc21:2.4": "“Well then, let’s go outside the monastery zone, appoint each other as instructors of the nuns, and then instruct them.” ",
   "pli-tv-bu-vb-pc21:2.5": "After doing just that, they again went to the nuns and said, “Sisters, we too have been appointed. ",
