Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc21_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc21_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc21_translation-en-brahmali.json
@@ -7,7 +7,7 @@
   "pli-tv-bu-vb-pc21:1.0.1": "Origin story ",
   "pli-tv-bu-vb-pc21:1.0.2": "First sub-story ",
   "pli-tv-bu-vb-pc21:1.1": "At one time the Buddha was staying at Sāvatthī in the Jeta Grove, Anāthapiṇḍika’s Monastery. ",
-  "pli-tv-bu-vb-pc21:1.2": "At that time the senior monks who were instructing the nuns received robe-cloth, almsfood, dwellings, and medicines. ",
+  "pli-tv-bu-vb-pc21:1.2": "At that time the senior monks who were instructing the nuns received robe-cloth, almsfood, dwellings, and medicinal supplies. ",
   "pli-tv-bu-vb-pc21:1.3": "When the monks from the group of six found out about this, ",
   "pli-tv-bu-vb-pc21:1.5": "they thought, “Well then, let’s instruct the nuns.” ",
   "pli-tv-bu-vb-pc21:1.6": "They then went to the nuns and said, “Come to us, Sisters, and we too will instruct you.” ",
