--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -527,7 +527,7 @@
   "pli-tv-kd16:5.1.2": "When he eventually arrived, ",
   "pli-tv-kd16:5.1.3": "he stayed, in the hall with the peaked roof in the Great Wood. ",
   "pli-tv-kd16:5.1.4": "At that time people were doing careful building work. ",
-  "pli-tv-kd16:5.1.5": "And the monks who supervised the building work were respectfully supported with robe-cloth, almsfood, dwellings, and medicines. ",
+  "pli-tv-kd16:5.1.5": "And the monks who supervised the building work were respectfully supported with robe-cloth, almsfood, dwellings, and medicinal supplies. ",
   "pli-tv-kd16:5.1.6": "Then a certain poor tailor thought, ",
   "pli-tv-kd16:5.1.7": "“It must be really worthwhile, seeing as these people do such careful building work. ",
   "pli-tv-kd16:5.1.8": "Why donʼt I too do building work?” ",
