Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss13_translation-en-brahmali.json
@@ -109,7 +109,7 @@
   "pli-tv-bu-vb-ss13:2.1": "A monk … a village or town: ",
   "pli-tv-bu-vb-ss13:2.2": "a village and a town and a city are included in just a village and a town. ",
   "pli-tv-bu-vb-ss13:2.3": "Lives supported by: ",
-  "pli-tv-bu-vb-ss13:2.4": "robe-cloth, almsfood, dwellings, and medicines can be obtained in that place. ",
+  "pli-tv-bu-vb-ss13:2.4": "robe-cloth, almsfood, dwellings, and medicinal supplies can be obtained in that place. ",
   "pli-tv-bu-vb-ss13:2.5": "A family: ",
   "pli-tv-bu-vb-ss13:2.6": "there are four kinds of families: the aristocratic family, the brahmin family, the merchant family, the worker family. ",
   "pli-tv-bu-vb-ss13:2.7": "A corrupter of families: ",
