--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd6_translation-en-brahmali.json
@@ -1286,7 +1286,7 @@
   "pli-tv-kd6:36.5.3": "The Buddha then gave him a progressive talk—",
   "pli-tv-kd6:36.5.4": "on generosity, morality, and heaven; on the danger, degradation, and defilement of worldly pleasures; and he revealed the benefits of renunciation. When the Buddha knew that his mind was ready, supple, without hindrances, joyful, and confident, he revealed the teaching unique to the Buddhas: suffering, its origin, its end, and the path. And just as a clean and stainless cloth absorbs dye properly, so too, while he was sitting right there, Roja experienced the stainless vision of the Truth: “Anything that has a beginning has an end.” He had seen the Truth, had reached, understood, and penetrated it. He had gone beyond doubt and uncertainty, had attained to confidence, and had become independent of others in the Teacher’s instruction. ",
   "pli-tv-kd6:36.5.5": "He then said to the Buddha, ",
-  "pli-tv-kd6:36.5.6": "“Venerable Sir, it would be good if the venerables would accept robe-cloth, almsfood, dwellings, and medicines from me, and not from others.” ",
+  "pli-tv-kd6:36.5.6": "“Venerable Sir, it would be good if the venerables would accept robe-cloth, almsfood, dwellings, and medicinal supplies from me, and not from others.” ",
   "pli-tv-kd6:36.5.7": "“Roja, those who have seen the Truth with a trainee’s knowledge and vision, as you have, think like this. ",
   "pli-tv-kd6:36.5.9": "But listen, Roja, the monks will have to receive both from you and others.” ",
   "pli-tv-kd6:36.6.1": "At this time in Kusinārā there was a succession of fine meals. ",
