Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
@@ -308,7 +308,7 @@
   "pli-tv-bu-vb-pc8:2.5.55": "you gave robe-cloth to … ",
   "pli-tv-bu-vb-pc8:2.5.56": "you gave almsfood to … ",
   "pli-tv-bu-vb-pc8:2.5.57": "you gave furniture to … ",
-  "pli-tv-bu-vb-pc8:2.5.58": "you gave medicines to attained the fourth absorption in solitude … ",
+  "pli-tv-bu-vb-pc8:2.5.58": "you gave medicinal supplies to attained the fourth absorption in solitude … ",
   "pli-tv-bu-vb-pc8:2.5.59": "is attaining … has attained … obtains … masters … has realized the fourth absorption in solitude,” he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc8:2.6.0": "Non-offenses ",
   "pli-tv-bu-vb-pc8:2.6.1": "There is no offense: ",
