--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
@@ -302,7 +302,7 @@
   "pli-tv-bu-vb-pc8:2.5.49": "who has made use of your robe-cloth … ",
   "pli-tv-bu-vb-pc8:2.5.50": "who has made use of your almsfood … ",
   "pli-tv-bu-vb-pc8:2.5.51": "who has made use of your furniture … ",
-  "pli-tv-bu-vb-pc8:2.5.52": "who has made use of your medicines attained the fourth absorption in solitude … is attaining … has attained … obtains … masters … has realized the fourth absorption in solitude,” he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc8:2.5.52": "who has made use of your medicinal supplies attained the fourth absorption in solitude … is attaining … has attained … obtains … masters … has realized the fourth absorption in solitude,” he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc8:2.5.53": "Tells: ",
   "pli-tv-bu-vb-pc8:2.5.54": "if a monk says to a person who is not fully ordained, “The monk you gave a dwelling to … etc. … ",
   "pli-tv-bu-vb-pc8:2.5.55": "you gave robe-cloth to … ",
