Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-pc/pli-tv-bu-vb-pc8_translation-en-brahmali.json
@@ -296,7 +296,7 @@
   "pli-tv-bu-vb-pc8:2.5.43": "if a monk says to a person who is not fully ordained, “The monk who made use of your robe-cloth … ",
   "pli-tv-bu-vb-pc8:2.5.44": "who made use of your almsfood … ",
   "pli-tv-bu-vb-pc8:2.5.45": "who made use of your dwelling … ",
-  "pli-tv-bu-vb-pc8:2.5.46": "who made use of your medicines attained the fourth absorption in solitude … is attaining … has attained … obtains … masters … has realized the fourth absorption in solitude,” he commits an offense of wrong conduct. ",
+  "pli-tv-bu-vb-pc8:2.5.46": "who made use of your medicinal supplies attained the fourth absorption in solitude … is attaining … has attained … obtains … masters … has realized the fourth absorption in solitude,” he commits an offense of wrong conduct. ",
   "pli-tv-bu-vb-pc8:2.5.47": "Tells: ",
   "pli-tv-bu-vb-pc8:2.5.48": "if a monk says to a person who is not fully ordained, “The monk who has made use of your dwelling … etc. … ",
   "pli-tv-bu-vb-pc8:2.5.49": "who has made use of your robe-cloth … ",
