Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -717,7 +717,7 @@
   "pli-tv-kd11:18.4.3": "“I’m not abusing and insulting you. ",
   "pli-tv-kd11:18.4.4": "Please stay at Macchikāsaṇḍa. ",
   "pli-tv-kd11:18.4.5": "The mango grove is delightful. ",
-  "pli-tv-kd11:18.4.6": "I’ll do my best to supply you with robe-cloth, almsfood, a dwelling, and medicines.” ",
+  "pli-tv-kd11:18.4.6": "I’ll do my best to supply you with robe-cloth, almsfood, a dwelling, and medicinal supplies.” ",
   "pli-tv-kd11:18.4.7": "Sudhamma repeated what he had said a second time and Citta responded as before. ",
   "pli-tv-kd11:18.4.8": "When Sudhamma repeated it a third time, ",
   "pli-tv-kd11:18.4.11": "Citta said, “Where will you go?” ",
